syntax = "proto3";

package stats.service.dashboard;

import "google/protobuf/empty.proto";
import "stats/messages/recommendation.proto";

option java_package = "ru.practicum.ewm.stats.proto";

service RecommendationsController {
  rpc GetRecommendationsForUser (stats.message.UserPredictionsRequestProto)
      returns (stream stats.message.RecommendedEventProto);

  rpc GetSimilarEvents (stats.message.SimilarEventsRequestProto)
      returns (stream stats.message.RecommendedEventProto);

  rpc GetInteractionsCount (stats.message.InteractionsCountRequestProto)
      returns (stream stats.message.RecommendedEventProto);
}